// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab /> override the tabIndex if it was provided 1`] = `
<li
  aria-controls={null}
  aria-disabled="false"
  aria-selected="false"
  className="react-tabs__tab"
  data-rttab={true}
  id={null}
  role="tab"
  tabIndex="0"
>
  Hello
</li>
`;

exports[`<Tab /> should accept className 1`] = `
<li
  aria-controls={null}
  aria-disabled="false"
  aria-selected="false"
  className="foobar"
  data-rttab={true}
  id={null}
  role="tab"
  tabIndex={null}
/>
`;

exports[`<Tab /> should allow to be wrapped in higher-order-component 1`] = `
<li
  aria-controls={null}
  aria-disabled="false"
  aria-selected="false"
  className="react-tabs__tab"
  data-rttab={true}
  id={null}
  role="tab"
  tabIndex={null}
/>
`;

exports[`<Tab /> should have sane defaults 1`] = `
<li
  aria-controls={null}
  aria-disabled="false"
  aria-selected="false"
  className="react-tabs__tab"
  data-rttab={true}
  id={null}
  role="tab"
  tabIndex={null}
/>
`;

exports[`<Tab /> should not allow overriding all default properties 1`] = `
<li
  aria-controls={null}
  aria-disabled="false"
  aria-selected="false"
  className="react-tabs__tab"
  data-rttab={true}
  id={null}
  role="tab"
  tabIndex={null}
/>
`;

exports[`<Tab /> should pass through custom properties 1`] = `
<li
  aria-controls={null}
  aria-disabled="false"
  aria-selected="false"
  className="react-tabs__tab"
  data-rttab={true}
  data-tooltip="Tooltip contents"
  id={null}
  role="tab"
  tabIndex={null}
/>
`;

exports[`<Tab /> should support being disabled 1`] = `
<li
  aria-controls={null}
  aria-disabled="true"
  aria-selected="false"
  className="react-tabs__tab react-tabs__tab--disabled"
  data-rttab={true}
  id={null}
  role="tab"
  tabIndex={null}
/>
`;

exports[`<Tab /> should support being disabled with custom class name 1`] = `
<li
  aria-controls={null}
  aria-disabled="true"
  aria-selected="false"
  className="react-tabs__tab coolDisabled"
  data-rttab={true}
  id={null}
  role="tab"
  tabIndex={null}
/>
`;

exports[`<Tab /> should support being selected 1`] = `
<li
  aria-controls="1234"
  aria-disabled="false"
  aria-selected="true"
  className="react-tabs__tab react-tabs__tab--selected"
  data-rttab={true}
  id="abcd"
  role="tab"
  tabIndex="0"
>
  Hello
</li>
`;

exports[`<Tab /> should support being selected with custom class 1`] = `
<li
  aria-controls={null}
  aria-disabled="false"
  aria-selected="true"
  className="react-tabs__tab cool"
  data-rttab={true}
  id={null}
  role="tab"
  tabIndex="0"
/>
`;
